# haskell_cource

10_foldingLists/: chapter_exercises.hs  exercise_10_6.hs  myFolds.hs  scan.hs
11_algebraicDatatypes/: binaryTree.hs  cipher.hs  dataConstructorExs.hs  goats.hs  newTypeExs.hs  programmer.hs  razor.hs
12_signallingAdversity/: beforeVowel.hs  countVowels.hs  myEither.hs  natural.hs  notTheString.hs  person.hs  person1.hs  validateWord.hs
13_creatingProject/hangman/: hangman.cabal
13_creatingProject/hangman/.stack-work/: stack.sqlite3
13_creatingProject/hangman/.stack-work/ghci/2b93fe03/: cabal_macros.h
13_creatingProject/hangman/.stack-work/ghci/bb29d077/: cabal_macros.h
13_creatingProject/hangman/.stack-work/ghci/c087a543/: cabal_macros.h
13_creatingProject/hangman/.stack-work/install/x86_64-linux-tinfo6/bf4290b7aa72e3f392a18551685cde33cd54ae774daa2ab53b9c023fc3ce2c21/8.6.5/pkgdb/: hangman-0.1.0.0-4iJUxvi4xwAGb7yt8rZhAO.conf  package.cache
13_creatingProject/hangman/data/: dict.txt
13_creatingProject/hangman/src/: Main.hs
15_monoid_semigroup/: monoid.txt  my_booly.hs
16_functor/: commonly_used_functors.hs  embaded_functor.hs  fix_me.hs  functor.txt  functor_transformer.hs  good_bad_ugly.hs  stacked_functors.hs  surprising_functor.hs  uniq_to_datatype_functors.hs
17_applicative/: applicative_in_use.hs  chapter_exercises.hs  cow.hs  defining.hs  fixer_upper.hs  law_test.hs  laws.hs  lookups_test.hs  zip_list_monoid.hs
18_monad/: application_and_composition.hs  chapter_ex.hs  definition.hs  do_syntax.hs  either_monad_exercise.hs  examples.hs  (+1 more)
(+57 files in other folders)
