name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:       src
  exposed-modules:      Hangman
  ghc-options:          -Wall -fwarn-tabs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , random
                      , split

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Hangman
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hangman
                     , hspec
                     , QuickCheck

test-suite tests
  hs-source-dirs:       tests
  main-is:              tests.hs
  ghc-options:          -Wall -fno-warn-orphans
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base
                      , hangman
                      , random
                      , split
                      , hspec
                      , QuickCheck
